--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build and push docker image
-on:
-  workflow_dispatch:
-  release:
-  push:
-    branches:
-      - 'main'
+on: [push]
+  # workflow_dispatch:
+  # release:
+  # push:
+  #   branches:
+  #     - 'main'
 
 env:
   REGISTRY: ghcr.io
@@ -33,11 +33,11 @@ jobs:
           password: ${{ secrets.TOKEN }}
       - name: Build, Squash, and Push to Github Packages
         run: |
-          docker build --squash --platform=linux/amd64 -t ${{ env.REGISTRY }}/${{ env.REPO_LOWER }}/pmtiles_base:latest .
-          docker push ${{ env.REGISTRY }}/${{ env.REPO_LOWER }}/pmtiles_base:latest
+          docker build --squash --platform=linux/amd64 -t ${{ env.REGISTRY }}/${{ env.REPO_LOWER }}/pmtiles_base:test .
+          docker push ${{ env.REGISTRY }}/${{ env.REPO_LOWER }}/pmtiles_base:test
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -49,9 +49,8 @@ jobs:
       - name: Tag and Push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: pmtiles_base
-          IMAGE_TAG: latest
         run: |
-          docker tag ${{ env.REGISTRY }}/${{ env.REPO_LOWER }}/pmtiles_base:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker tag ${{ env.REGISTRY }}/${{ env.REPO_LOWER }}/pmtiles_base:test ${{ env.ECR_REGISTRY }}/pmtiles_base:test
+          docker push ${{ env.ECR_REGISTRY }}/pmtiles_base:test
+
 
